--- a/Adventure/main_summary.html
+++ b/Adventure/main_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>main Project Status (04/26/2015 - 14:39:45)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>main Project Status (04/28/2015 - 15:28:01)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Adventure.xise</TD>
@@ -13,18 +13,19 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>main</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Programming File Generated</TD>
+<TD>Placed and Routed</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc3s100e-5cp132</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD>
+No Errors</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD>&nbsp;</TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/*.xmsgs?&DataKey=Warning'>54 Warnings (13 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -58,50 +59,62 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#FFFF99'>
 <TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
 </TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Flip Flops</TD>
-<TD ALIGN=RIGHT>106</TD>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number Slice Registers</TD>
+<TD ALIGN=RIGHT>273</TD>
 <TD ALIGN=RIGHT>1,920</TD>
-<TD ALIGN=RIGHT>5%</TD>
+<TD ALIGN=RIGHT>14%</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
+<TD ALIGN=RIGHT>231</TD>
+<TD>&nbsp;</TD>
+<TD>&nbsp;</TD>
+<TD COLSPAN='2'>&nbsp;</TD>
+</TR>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Latches</TD>
+<TD ALIGN=RIGHT>42</TD>
+<TD>&nbsp;</TD>
+<TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>227</TD>
+<TD ALIGN=RIGHT>1,846</TD>
 <TD ALIGN=RIGHT>1,920</TD>
-<TD ALIGN=RIGHT>11%</TD>
+<TD ALIGN=RIGHT>96%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>161</TD>
 <TD ALIGN=RIGHT>960</TD>
-<TD ALIGN=RIGHT>16%</TD>
+<TD ALIGN=RIGHT>960</TD>
+<TD ALIGN=RIGHT>100%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing only related logic</TD>
-<TD ALIGN=RIGHT>161</TD>
-<TD ALIGN=RIGHT>161</TD>
+<TD ALIGN=RIGHT>960</TD>
+<TD ALIGN=RIGHT>960</TD>
 <TD ALIGN=RIGHT>100%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing unrelated logic</TD>
 <TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>161</TD>
+<TD ALIGN=RIGHT>960</TD>
 <TD ALIGN=RIGHT>0%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>279</TD>
+<TD ALIGN=RIGHT>1,916</TD>
 <TD ALIGN=RIGHT>1,920</TD>
-<TD ALIGN=RIGHT>14%</TD>
+<TD ALIGN=RIGHT>99%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>227</TD>
+<TD ALIGN=RIGHT>1,846</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as a route-thru</TD>
-<TD ALIGN=RIGHT>52</TD>
+<TD ALIGN=RIGHT>70</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -113,13 +126,13 @@ System Settings</A>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFGMUXs</TD>
-<TD ALIGN=RIGHT>3</TD>
+<TD ALIGN=RIGHT>4</TD>
 <TD ALIGN=RIGHT>24</TD>
-<TD ALIGN=RIGHT>12%</TD>
+<TD ALIGN=RIGHT>16%</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
 <TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>2.87</TD>
+<TD ALIGN=RIGHT>3.99</TD>
 <TD>&nbsp;</TD>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
@@ -156,22 +169,22 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Sun Apr 26 14:39:14 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/xst.xmsgs?&DataKey=Warning'>2 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/xst.xmsgs?&DataKey=Info'>11 Infos (8 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.bld'>Translation Report</A></TD><TD>Current</TD><TD>Sun Apr 26 14:39:20 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Sun Apr 26 14:39:25 2015</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Sun Apr 26 14:39:31 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/par.xmsgs?&DataKey=Warning'>5 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Tue Apr 28 15:27:32 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/xst.xmsgs?&DataKey=Warning'>41 Warnings (9 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/xst.xmsgs?&DataKey=Info'>5 Infos (3 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.bld'>Translation Report</A></TD><TD>Current</TD><TD>Tue Apr 28 15:27:38 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Tue Apr 28 15:27:44 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/map.xmsgs?&DataKey=Warning'>6 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.par'>Place and Route Report</A></TD><TD>Current</TD><TD>Tue Apr 28 15:27:55 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/par.xmsgs?&DataKey=Warning'>7 Warnings (2 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Sun Apr 26 14:39:35 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/trce.xmsgs?&DataKey=Info'>5 Infos (0 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.bgn'>Bitgen Report</A></TD><TD>Current</TD><TD>Sun Apr 26 14:39:40 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>3 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.twr'>Post-PAR Static Timing Report</A></TD><TD>Current</TD><TD>Tue Apr 28 15:27:59 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/trce.xmsgs?&DataKey=Info'>5 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\main.bgn'>Bitgen Report</A></TD><TD>Out of Date</TD><TD>Tue Apr 28 15:13:11 2015</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\_xmsgs/bitgen.xmsgs?&DataKey=Warning'>3 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 </TABLE>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Sat Apr 25 01:02:14 2015</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Sun Apr 26 14:39:40 2015</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Sun Apr 26 14:39:45 2015</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Tue Apr 28 15:13:11 2015</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Dilancuan/Documents/FPGAdventure/FPGAdventure/Adventure\webtalk.log'>WebTalk Log File</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Tue Apr 28 15:13:16 2015</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 04/26/2015 - 14:39:45</center>
+<br><center><b>Date Generated:</b> 04/28/2015 - 15:29:48</center>
 </BODY></HTML>
